# beeai-platform

./: CONTRIBUTING.md  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tasks.toml
.github/workflows/: release.yml
agents/a2a-test/a2a-echo-agent/: package-lock.json  package.json  test.ts
agents/a2a-ui-test/final/: pyproject.toml
agents/a2a-ui-test/final/src/final/: __main__.py  agent.py
agents/chat/: pyproject.toml
agents/community/business-case-assistant/: README.md
agents/form/: pyproject.toml
agents/official/rag-agent/: pyproject.toml
agents/rag/: pyproject.toml
apps/beeai-cli/: pyproject.toml
apps/beeai-sdk/: README.md  pyproject.toml
apps/beeai-sdk-py/: pyproject.toml
apps/beeai-sdk-py/examples/: secrets_agent.py
apps/beeai-sdk-ts/: package.json
apps/beeai-server/: Dockerfile  pyproject.toml  tasks.toml
apps/beeai-ts-sdk/: package.json  tasks.toml  tsconfig.json
apps/beeai-ui/: .env.example  Dockerfile  next.config.ts  package.json  tasks.toml  tsconfig.json
apps/beeai-web/: .env.example  beeai-env.d.ts  package.json  stylelint.config.mjs  tasks.toml
docs/: docs.json
docs/build-agents/: agent-details.mdx  files.mdx  hello-world.mdx  messages.mdx
docs/concepts/: a2a.mdx  architecture.mdx  gui-components.mdx
docs/deployment/: kubernetes.mdx
docs/how-to/: build-agents.mdx  share-agents.mdx
docs/introduction/: installation.mdx  welcome.mdx
helm/: Chart.yaml  tasks.toml  values.yaml
helm/beeai-platform/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml
(+543 files in other folders)
