[project]
name = "final"
version = "0.1.0"
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.13,<4"
dependencies = [
    "a2a-sdk>=0.2.11",
    "pydantic-settings>=2.9.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.scripts]
server = "final.__main__:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
